--- a/css/type.css
+++ b/css/type.css
@@ -1,11 +1,26 @@
 
+.navbar-brand {
+ font-family: 'Lobster', cursive;
+ font-size: 40px;
 
+}
 /*# sourceMappingURL=type.css.map */
 .col-lg-3 { margin-top: 100px; }
 
 .please {
 
  margin-bottom: 100px;
+}
+
+.the_team {
+
+ font-family: 'Open Sans', sans-serif;
+
+}
+
+.img-circle {
+ background-color: #3c763d;
+
 }
 
 .header_button {
